# msm-webgpu

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
src/: ark_utils.rs  gpu.rs  gpu_old.rs  lib.rs  main.rs  utils.rs
src/ark/: mod.rs  pallas.rs  utils.rs
src/cuzk/: gpu.rs  lib.rs  mod.rs  msm.rs  shader_manager.rs  test.rs  utils.rs
src/cuzk/test/: cuzk.rs  decompose.rs  decompose_shader.rs  diff_impl.rs  field.rs  mod.rs  point.rs  smvp_shader.rs  transpose_shader.rs  utils.rs
src/cuzk/wgsl/bigint/: bigint.template.wgsl
src/cuzk/wgsl/curve/: curve.wgsl  ec.template.wgsl  test_point.wgsl  twisted_ec.template.wgsl
src/cuzk/wgsl/cuzk/: bpr.template.wgsl  decompose_scalars.template.wgsl  smvp.template.wgsl
src/cuzk/wgsl/field/: barrett.template.wgsl  field.template.wgsl  test_field.wgsl
src/cuzk/wgsl/montgomery/: mont_pro_cios.template.wgsl  mont_pro_modified.template.wgsl  mont_pro_product.template.wgsl  mont_product.template.wgsl
src/cuzk/wgsl/struct/: structs.template.wgsl
src/cuzk/wgsl/test/: test_diff_impl.wgsl  test_field.wgsl  test_point.wgsl
src/gpu/: mod.rs  msm.rs  ops.rs  pippenger.rs
src/gpu/test/: bucket_accumulation.rs  constants.rs  mod.rs  ops.rs  pippenger.rs  pippenger_phases.rs
src/halo2curves/: bn254.rs  bn256.rs  mod.rs  pallas.rs  utils.rs
src/halo2curves/bn256/: mod.rs
src/halo2curves/pallas/: mod.rs
src/halo2curves/test/: bn256.rs  mod.rs  pallas.rs
src/montgomery/: bn256.rs  mod.rs  utils.rs
src/naive/: mod.rs
src/naive/gpu/: mod.rs  msm.rs
src/naive/gpu/test/: constants.rs  mod.rs  ops.rs  pippenger.rs  pippenger_phases.rs
src/naive/halo2curves/: mod.rs
src/naive/halo2curves/test/: bn256.rs  mod.rs  pallas.rs
src/naive/utils/: bigint.rs  mod.rs  montgomery.rs
src/naive/wgsl/: bigint.wgsl  pippenger.wgsl  storage.wgsl
src/naive/wgsl/bn254/: field.wgsl
src/naive/wgsl/pallas/: curve.wgsl  field.wgsl
src/naive/wgsl/test/: constants.wgsl  field.wgsl  field_to_bytes.wgsl  msm.wgsl  pippenger_phases.wgsl  sum_of_sums.wgsl
src/pallas/: ark_pallas.rs  halo2_pallas.rs  mod.rs
src/utils/: files.rs  montgomery.rs
src/wgsl/: bigint.wgsl  bn254.wgsl  main-old.wgsl  main.wgsl  main_new.wgsl  main_old.wgsl  pallas.wgsl  pippenger.wgsl  pippenger_new.wgsl  pippenger_old.wgsl  storage.wgsl  test_cos.wgsl
src/wgsl/bn254/: _all.wgsl  curve.wgsl  field.wgsl  pippenger.wgsl
src/wgsl/pallas/: _all.wgsl  curve.wgsl  pippenger.wgsl
src/wgsl/test/: bucket_accumulation.wgsl  constants.wgsl  field.wgsl  field_to_bytes.wgsl  msm.wgsl  ops.wgsl  pippenger_phases.wgsl  point.wgsl
tests/: cuzk.rs  decompose_shader.rs  field.rs  point.rs  smvp_shader.rs  test_webgpu_msm_cuzk_16.rs  test_webgpu_msm_cuzk_16_bn256.rs  test_webgpu_msm_cuzk_16_pallas.rs  test_webgpu_msm_cuzk_16_secp256k1.rs  test_webgpu_msm_cuzk_16_secq256k1.rs  test_webgpu_msm_cuzk_17.rs  test_webgpu_msm_cuzk_18.rs  test_webgpu_msm_cuzk_19.rs  test_webgpu_msm_cuzk_20.rs  test_webgpu_msm_cuzk_random.rs  transpose_shader.rs
www/: index.html  package-lock.json  package.json  worker.js
