[package]
name = "msm-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "24.0.3"
pollster = "0.3.0"
bytemuck = "1.14.0"
num-bigint = "0.4.4"
num-integer = "0.1.46"
itertools = "0.12.0"
num-traits = "0.2.17"
ahash = { version = "0.8.11", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["console"] }
halo2curves = { path="../halo2curves", features = ["bits", "derive_serde"] }
# halo2curves = { git = "https://github.com/ICME-Lab/halo2curves", branch = "main", features = ["bits", "derive_serde"] }
group = "0.13.0"
# ff = { version = "0.13.0", features = ["derive"] }
ff = { path = "../ff", default-features = false, features = ["std"] }
rand = "0.8.5"
oneshot = "0.1.11"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.0", default-features = false, features = ["js"] }

[patch.crates-io]
ff = { path = "../ff" }